--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-component-build": "~0.3.2",
     "component-sass": "~0.1.2",
     "grunt-contrib-concat": "~0.3.0",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "grunt-mocha": "~0.4.1"
   }
 }
