--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
       "url": "https://github.com/vieron/uick/blob/master/LICENSE"
     }
   ],
+  "scripts": {
+    "test": "grunt test"
+  },
   "dependencies": {
     "component-builder": "0.9.x"
   },
