--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "component-builder": "0.9.x"
   },
   "devDependencies": {
+    "component": "*"
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
