--- a/package.json
+++ b/package.json
@@ -20,21 +20,12 @@
     }
   ],
   "dependencies": {
-    "component-builder": "0.9.x"
-  },
-  "devDependencies": {
+    "uick-grunt": "*",
     "component": "*",
     "grunt-cli": "~0.1.9",
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-cssmin": "~0.6.1",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-component-build": "~0.3.2",
-    "component-sass": "~0.1.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "underscore": "~1.5.2",
-    "grunt-mocha": "~0.4.1"
+    "grunt": "~0.4.1"
+  },
+  "devDependencies": {
+
   }
 }
