--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: node_js
 node_js:
   - "0.10.x"
+rvm:
+  - "1.9.3"
+before_install:
+  - gem install jsduck -v=4
 before_script:
   - component install
 script:
-  - grunt
-  - grunt test
+  - grunt --verbose
+  - grunt test --verbose
+after_success:
+  - chmod a+x node_modules/uick-grunt/update-gh-pages.sh
+  - ./node_modules/uick-grunt/update-gh-pages.sh
+env:
+  global:
+    - REPO="vieron/uick"
+    - secure: BGd7nFfP15gxfNrGACKxlX8TIROIThRTQCGl04PU3/nBzEjEE70G/P6UcDpFQOjJrV1a/8vPn6k/y1TkJAESRqIv7dpARK+gYQywtQaHWOg8olcYkO8wQspgrn+L6mXpydPrIDHPlnas9ymA1A7YliuquYZTIkddVUZs3GX9hfs=
