--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uick",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "homepage": "http://vieron.net",
   "author": {
     "name": "vieron",
@@ -26,6 +26,6 @@
     "grunt": "~0.4.1"
   },
   "devDependencies": {
-
+    "grunt-conventional-changelog": "~1.0.0"
   }
 }
